Integrate Firebase into the project by adding necessary dependencies, configuring build files, and generating required options for Android and iOS platforms.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_hooks: ^0.21.2
   rxdart: ^0.28.0
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  cloud_firestore: ^5.6.8
 
 dev_dependencies:
   flutter_test:
