Update .gitignore to exclude Firebase configuration files and options

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -12,3 +12,7 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+
+./lib/firebase_options.dart/*
+./android/app/google-services.json/*
