Refactor .gitignore to correctly exclude Firebase configuration files; add AuthBloc implementation for authentication handling.

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -14,5 +14,5 @@ key.properties
 **/*.jks
 
 
-./lib/firebase_options.dart/*
-./android/app/google-services.json/*
+lib/firebase_options.dart
+android/app/google-services.json
