Refactor code for improved readability and maintainability; add ContactListView and NewContactView components

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -27,3 +27,6 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+formatter:
+  trailing_commas: preserve
